# spiffe-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: README.md
examples/spiffe-grpc/: README.md  client.rs  server.rs
examples/spiffe-http/: README.md  client.rs  server.rs
examples/spiffe-jwt/: README.md  server.rs
examples/spiffe-jwt-using-proxy/: README.md  client.rs  proxy.rs  server.rs
examples/spiffe-tls/: README.md  client.rs  server.rs
examples/spiffe-watcher/: README.md  main.rs
src/: lib.rs
src/bundle/: mod.rs
src/bundle/jwtbundle/: mod.rs
src/bundle/spiffebundle/: mod.rs
src/bundle/x509bundle/: mod.rs
src/federation/: mod.rs
src/internal/: jwk.rs  jwtutil.rs  mod.rs  pemutil.rs  x509util.rs
src/logger/: mod.rs
src/spiffeid/: charset.rs  errors.rs  id.rs  matcher.rs  mod.rs  path.rs  require.rs  trustdomain.rs
src/spiffetls/: dial.rs  listen.rs  mod.rs  mode.rs  option.rs  peerid.rs  tlsconfig.rs
src/svid/: jwtsvid.rs  mod.rs  x509svid.rs
src/workloadapi/: addr.rs  backoff.rs  bundlesource.rs  client.rs  convenience.rs  jwtsource.rs  mod.rs  option.rs  watcher.rs  x509context.rs  x509source.rs
tests/: compat_spiffebundle_go.rs  compat_spiffetls_go.rs  compat_workloadapi_go.rs  federation_fetch_tests.rs  federation_watch_handler_tests.rs  jwtbundle_tests.rs  jwtsvid_tests.rs  spiffebundle_tests.rs  spiffeid_basic.rs  spiffeid_parity.rs  workloadapi_addr_tests.rs  x509bundle_tests.rs  x509svid_tests.rs
