[package]
name = "spiffe-rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
spiffeid-charset-backcompat = []

[dependencies]
thiserror = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
pem = "3"
x509-parser = { version = "0.16", features = ["verify"] }
serde_json = "1"
oid-registry = "0.7"
rsa = "0.9"
pkcs8 = "0.10"
p256 = { version = "0.13", features = ["pkcs8"] }
p384 = { version = "0.13", features = ["pkcs8"] }
p521 = { version = "0.13", features = ["pkcs8"] }
sha2 = { version = "0.10", features = ["oid"] }
prost = "0.12"
prost-types = "0.12"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = { version = "0.11", features = ["transport"] }
rustls-native-certs = "0.7"
tokio-util = "0.7"
tower = "0.4"
hyper = { version = "0.14", features = ["server", "http1"] }

[dev-dependencies]
rand = "0.8"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.11"
