[package]
name = "spiffe-rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of spiffe-go with SPIFFE IDs, bundles, SVIDs, Workload API client, federation helpers, and rustls-based SPIFFE TLS utilities."
license = "Apache-2.0"
repository = "https://github.com/script3r/spiffe-rs"
readme = "README.md"
keywords = ["spiffe", "spire", "svid", "workload-api", "tls"]
categories = ["authentication", "cryptography", "network-programming"]

[features]
default = []
spiffeid-charset-backcompat = []

[dependencies]
thiserror = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
pem = "3"
x509-parser = { version = "0.16", features = ["verify"] }
serde_json = "1"
oid-registry = "0.7"
rsa = "0.9"
pkcs8 = "0.10"
p256 = { version = "0.13", features = ["pkcs8"] }
p384 = { version = "0.13", features = ["pkcs8"] }
p521 = { version = "0.13", features = ["pkcs8"] }
sha2 = { version = "0.10", features = ["oid"] }
prost = "0.12"
prost-types = "0.12"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tonic = { version = "0.11", features = ["transport"] }
rustls-native-certs = "0.7"
tokio-util = "0.7"
tower = "0.4"
hyper = { version = "0.14", features = ["client", "server", "http1"] }
tokio-rustls = "0.24"

[[example]]
name = "spiffe-tls-client"
path = "examples/spiffe-tls/client.rs"

[[example]]
name = "spiffe-tls-server"
path = "examples/spiffe-tls/server.rs"

[[example]]
name = "spiffe-watcher"
path = "examples/spiffe-watcher/main.rs"

[[example]]
name = "spiffe-grpc-client"
path = "examples/spiffe-grpc/client.rs"

[[example]]
name = "spiffe-grpc-server"
path = "examples/spiffe-grpc/server.rs"

[[example]]
name = "spiffe-http-client"
path = "examples/spiffe-http/client.rs"

[[example]]
name = "spiffe-http-server"
path = "examples/spiffe-http/server.rs"

[[example]]
name = "spiffe-jwt-client"
path = "examples/spiffe-jwt/client.rs"

[[example]]
name = "spiffe-jwt-server"
path = "examples/spiffe-jwt/server.rs"

[[example]]
name = "spiffe-jwt-using-proxy-client"
path = "examples/spiffe-jwt-using-proxy/client.rs"

[[example]]
name = "spiffe-jwt-using-proxy-proxy"
path = "examples/spiffe-jwt-using-proxy/proxy.rs"

[[example]]
name = "spiffe-jwt-using-proxy-server"
path = "examples/spiffe-jwt-using-proxy/server.rs"

[dev-dependencies]
rand = "0.8"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.11"
